--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <img style="width: 100%;" src="img/section05_header_sp.webp" alt="セミナー講師の紹介" class="sp">
   </figure>
   <figure class="" style="text-align: center;">
-    <img style="width: 70%;" src="img/section05_main.jpg" alt="" class="pc">
-    <img style="width: 100%;" src="img/section05_main.jpg" alt="" class="sp">
+    <img style="width: 70%;" src="img/section05-main.jpg" alt="" class="pc">
+    <img style="width: 100%;" src="img/section05-main.jpg" alt="" class="sp">
   </figure>
   <div id="section0">
     <ul class="container"><br>
